# shieldiac

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  INTERVIEW_GUIDE.md  LICENSE  MEDIUM_BLOG.md  Makefile  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  publish.yml  rule-tests.yml
backend/: .dockerignore  Dockerfile  __init__.py  config.py  docker-compose.yml  main.py  requirements-dev.txt  requirements.txt
backend/api/: billing.py  dashboard.py  health.py  reports.py  rules.py  scans.py  webhooks.py
backend/models/: billing.py  compliance.py  finding.py  github.py  rule.py  scan.py
backend/rules/: base.py  loader.py
backend/rules/docker/: best_practices.py
backend/rules/kubernetes/: network_policy.py  pod_security.py  rbac.py  resources.py
backend/rules/terraform/: aws_ec2.py  aws_iam.py  aws_rds.py  aws_s3.py  aws_vpc.py  gcp_compute.py  gcp_iam.py  gcp_storage.py
backend/services/: ai_fix_generator.py  billing_service.py  cloudformation_scanner.py  compliance_mapper.py  dockerfile_scanner.py  github_service.py  kubernetes_scanner.py  queue_service.py  report_generator.py  scanner_engine.py  scoring_engine.py  terraform_scanner.py
backend/utils/: formatting.py  hcl_parser.py  pdf_generator.py  security.py  yaml_parser.py
database/: schema.sql  seed.sql
database/migrations/: 001_initial.sql
docs/: AI-FIX-SUGGESTIONS.md  API.md  ARCHITECTURE.md  BUSINESS.md  COMPLIANCE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  RULES-ENGINE.md  SECURITY.md
frontend/: next.config.js  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/dashboard/compliance/: page.tsx
frontend/src/app/dashboard/repos/: page.tsx
frontend/src/app/dashboard/repos/[id]/: page.tsx
frontend/src/app/dashboard/rules/: page.tsx
frontend/src/app/dashboard/scans/[id]/: page.tsx
frontend/src/app/dashboard/settings/: page.tsx
frontend/src/components/: ComplianceMatrix.tsx  FindingsList.tsx  Footer.tsx  Navbar.tsx  ScanTimeline.tsx  SecurityScoreCard.tsx  TrendChart.tsx
frontend/src/lib/: api.ts  utils.ts
infra/terraform/: cloud-run.tf  iam.tf  main.tf  outputs.tf  redis.tf  variables.tf
tests/: __init__.py  conftest.py  test_ai_fix_generator.py  test_compliance_mapper.py  test_dockerfile_scanner.py  test_kubernetes_scanner.py  test_scoring_engine.py  test_terraform_scanner.py  test_webhooks.py
tests/fixtures/docker/: insecure_dockerfile  secure_dockerfile
tests/fixtures/kubernetes/: insecure_pod.yaml  secure_deployment.yaml
tests/fixtures/terraform/: insecure_ec2.tf  insecure_s3.tf  secure_vpc.tf
