[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shieldiac"
version = "1.0.0"
description = "Catch security misconfigurations in infrastructure code — before they reach production."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "ShieldIaC", email = "hello@shieldiac.dev" },
]
keywords = [
    "security", "iac", "infrastructure-as-code", "terraform", "kubernetes",
    "docker", "cloudformation", "scanner", "compliance", "devops", "devsecops",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://shieldiac.dev"
Documentation = "https://shieldiac.dev/docs"
Repository = "https://github.com/shieldiac/shieldiac"
"Bug Tracker" = "https://github.com/shieldiac/shieldiac/issues"
Changelog = "https://github.com/shieldiac/shieldiac/blob/main/CHANGELOG.md"

# =============================================================================
# Tool Configuration
# =============================================================================

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests that require external services",
]
filterwarnings = [
    "ignore::DeprecationWarning:pkg_resources",
]

# ---------------------------------------------------------------------------
# ruff (linter + formatter — replaces flake8 + isort + black)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length = 100
src = ["backend", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "RET",  # flake8-return
    "PTH",  # flake8-use-pathlib
    "T20",  # flake8-print
    "S",    # flake8-bandit (security)
]
ignore = [
    "E501",   # line-too-long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults (FastAPI Depends)
    "RET504", # unnecessary-assign (readability preference)
]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "T20",    # allow print in tests
    "S101",   # allow assert in tests
    "S105",   # allow hardcoded passwords in tests
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# mypy (type checker)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "redis.*",
    "stripe.*",
    "openai.*",
    "reportlab.*",
    "asyncpg.*",
    "yaml.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["backend"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "pass",
]
show_missing = true
skip_covered = true
fail_under = 60
